--- a/Configuration/config.properties
+++ b/Configuration/config.properties
@@ -1,6 +1,6 @@
 baseURL =https://demo.guru99.com/v4/
-username =mngr422789
-password =zyhuguj
+username =mngr429183
+password =Avamyze
 #./ is representing the system.getproperty("?")
 #it is works in java class and properties also
 chromepath=./Drivers\\chromedriver.exe
